assignments/PA3/cool.output
Terminals unused in grammar

   ERROR


State 64 conflicts: 1 shift/reduce
State 67 conflicts: 1 shift/reduce
State 68 conflicts: 1 shift/reduce
State 91 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 100 conflicts: 1 shift/reduce
State 101 conflicts: 1 shift/reduce
State 102 conflicts: 1 shift/reduce
State 103 conflicts: 1 shift/reduce
State 104 conflicts: 1 shift/reduce
State 105 conflicts: 1 shift/reduce
State 111 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error ';'

    7 feature_list: nonempty_feature_list
    8             | %empty

    9 nonempty_feature_list: feature
   10                      | nonempty_feature_list feature

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   12        | OBJECTID ':' TYPEID ';'
   13        | OBJECTID ':' TYPEID ASSIGN expr ';'
   14        | error ';'

   15 formal_list: formal
   16            | formal_list ',' formal
   17            | %empty

   18 formal: OBJECTID ':' TYPEID

   19 expr: OBJECTID ASSIGN expr
   20     | expr '.' OBJECTID '(' comma_expr_list ')'
   21     | expr '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   22     | OBJECTID '(' comma_expr_list ')'
   23     | IF expr THEN expr ELSE expr FI
   24     | WHILE expr LOOP expr POOL
   25     | '{' semi_expr_list '}'
   26     | LET let_list IN expr
   27     | CASE expr OF case_list ESAC
   28     | NEW TYPEID
   29     | ISVOID expr
   30     | expr '+' expr
   31     | expr '-' expr
   32     | expr '*' expr
   33     | expr '/' expr
   34     | '~' expr
   35     | expr '<' expr
   36     | expr LE expr
   37     | expr '=' expr
   38     | NOT expr
   39     | '(' expr ')'
   40     | OBJECTID
   41     | INT_CONST
   42     | STR_CONST
   43     | BOOL_CONST

   44 comma_expr_list: expr
   45                | comma_expr_list ',' expr
   46                | %empty

   47 semi_expr_list: expr ';'
   48               | semi_expr_list expr ';'
   49               | error ';'

   50 case: OBJECTID ':' TYPEID DARROW expr ';'

   51 case_list: case
   52          | case_list case

   53 let: OBJECTID ':' TYPEID
   54    | OBJECTID ':' TYPEID ASSIGN expr

   55 let_list: let
   56         | let_list ',' let
   57         | error let


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11 20 21 22 39
')' (41) 11 20 21 22 39
'*' (42) 32
'+' (43) 30
',' (44) 16 45 56
'-' (45) 31
'.' (46) 20 21
'/' (47) 33
':' (58) 11 12 13 18 50 53 54
';' (59) 4 5 6 11 12 13 14 47 48 49 50
'<' (60) 35
'=' (61) 37
'@' (64) 21
'{' (123) 4 5 11 25
'}' (125) 4 5 11 25
'~' (126) 34
error (256) 6 14 49 57
CLASS (258) 4 5
ELSE (259) 23
FI (260) 23
IF (261) 23
IN (262) 26
INHERITS (263) 5
LET (264) 26
LOOP (265) 24
POOL (266) 24
THEN (267) 23
WHILE (268) 24
CASE (269) 27
ESAC (270) 27
OF (271) 27
DARROW (272) 50
NEW (273) 28
ISVOID (274) 29
STR_CONST (275) 42
INT_CONST (276) 41
BOOL_CONST (277) 43
TYPEID (278) 4 5 11 12 13 18 21 28 50 53 54
OBJECTID (279) 11 12 13 18 19 20 21 22 40 50 53 54
ASSIGN (280) 13 19 54
NOT (281) 38
LE (282) 36
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6, on right: 2 3
feature_list (49)
    on left: 7 8, on right: 4 5
nonempty_feature_list (50)
    on left: 9 10, on right: 7 10
feature (51)
    on left: 11 12 13 14, on right: 9 10
formal_list (52)
    on left: 15 16 17, on right: 11 16
formal (53)
    on left: 18, on right: 15 16
expr (54)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
    37 38 39 40 41 42 43, on right: 11 13 19 20 21 23 24 26 27 29 30
    31 32 33 34 35 36 37 38 39 44 45 47 48 50 54
comma_expr_list (55)
    on left: 44 45 46, on right: 20 21 22 45
semi_expr_list (56)
    on left: 47 48 49, on right: 25 48
case (57)
    on left: 50, on right: 51 52
case_list (58)
    on left: 51 52, on right: 27 52
let (59)
    on left: 53 54, on right: 55 56 57
let_list (60)
    on left: 55 56 57, on right: 26 56


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error . ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    6 class: error ';' .

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 8 (feature_list)

    feature_list           go to state 15
    nonempty_feature_list  go to state 16
    feature                go to state 17


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 18


State 13

   14 feature: error . ';'

    ';'  shift, and go to state 19


State 14

   11 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   12        | OBJECTID . ':' TYPEID ';'
   13        | OBJECTID . ':' TYPEID ASSIGN expr ';'

    '('  shift, and go to state 20
    ':'  shift, and go to state 21


State 15

    4 class: CLASS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 22


State 16

    7 feature_list: nonempty_feature_list .
   10 nonempty_feature_list: nonempty_feature_list . feature

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 7 (feature_list)

    feature  go to state 23


State 17

    9 nonempty_feature_list: feature .

    $default  reduce using rule 9 (nonempty_feature_list)


State 18

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 8 (feature_list)

    feature_list           go to state 24
    nonempty_feature_list  go to state 16
    feature                go to state 17


State 19

   14 feature: error ';' .

    $default  reduce using rule 14 (feature)


State 20

   11 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 25

    $default  reduce using rule 17 (formal_list)

    formal_list  go to state 26
    formal       go to state 27


State 21

   12 feature: OBJECTID ':' . TYPEID ';'
   13        | OBJECTID ':' . TYPEID ASSIGN expr ';'

    TYPEID  shift, and go to state 28


State 22

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 29


State 23

   10 nonempty_feature_list: nonempty_feature_list feature .

    $default  reduce using rule 10 (nonempty_feature_list)


State 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 30


State 25

   18 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 31


State 26

   11 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}' ';'
   16 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 32
    ','  shift, and go to state 33


State 27

   15 formal_list: formal .

    $default  reduce using rule 15 (formal_list)


State 28

   12 feature: OBJECTID ':' TYPEID . ';'
   13        | OBJECTID ':' TYPEID . ASSIGN expr ';'

    ASSIGN  shift, and go to state 34
    ';'     shift, and go to state 35


State 29

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 30

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 36


State 31

   18 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 37


State 32

   11 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 38


State 33

   16 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 25

    formal  go to state 39


State 34

   13 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 54


State 35

   12 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 12 (feature)


State 36

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 37

   18 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 18 (formal)


State 38

   11 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 55


State 39

   16 formal_list: formal_list ',' formal .

    $default  reduce using rule 16 (formal_list)


State 40

   23 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 56


State 41

   26 expr: LET . let_list IN expr

    error     shift, and go to state 57
    OBJECTID  shift, and go to state 58

    let       go to state 59
    let_list  go to state 60


State 42

   24 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 61


State 43

   27 expr: CASE . expr OF case_list ESAC

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 62


State 44

   28 expr: NEW . TYPEID

    TYPEID  shift, and go to state 63


State 45

   29 expr: ISVOID . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 64


State 46

   42 expr: STR_CONST .

    $default  reduce using rule 42 (expr)


State 47

   41 expr: INT_CONST .

    $default  reduce using rule 41 (expr)


State 48

   43 expr: BOOL_CONST .

    $default  reduce using rule 43 (expr)


State 49

   19 expr: OBJECTID . ASSIGN expr
   22     | OBJECTID . '(' comma_expr_list ')'
   40     | OBJECTID .

    ASSIGN  shift, and go to state 65
    '('     shift, and go to state 66

    $default  reduce using rule 40 (expr)


State 50

   38 expr: NOT . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 67


State 51

   34 expr: '~' . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 68


State 52

   25 expr: '{' . semi_expr_list '}'

    error       shift, and go to state 69
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr            go to state 70
    semi_expr_list  go to state 71


State 53

   39 expr: '(' . expr ')'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 72


State 54

   13 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   20 expr: expr . '.' OBJECTID '(' comma_expr_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '.'  shift, and go to state 80
    ';'  shift, and go to state 81
    '@'  shift, and go to state 82


State 55

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 83


State 56

   20 expr: expr . '.' OBJECTID '(' comma_expr_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   23     | IF expr . THEN expr ELSE expr FI
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    THEN  shift, and go to state 84
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '.'   shift, and go to state 80
    '@'   shift, and go to state 82


State 57

   57 let_list: error . let

    OBJECTID  shift, and go to state 58

    let  go to state 85


State 58

   53 let: OBJECTID . ':' TYPEID
   54    | OBJECTID . ':' TYPEID ASSIGN expr

    ':'  shift, and go to state 86


State 59

   55 let_list: let .

    $default  reduce using rule 55 (let_list)


State 60

   26 expr: LET let_list . IN expr
   56 let_list: let_list . ',' let

    IN   shift, and go to state 87
    ','  shift, and go to state 88


State 61

   20 expr: expr . '.' OBJECTID '(' comma_expr_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   24     | WHILE expr . LOOP expr POOL
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    LOOP  shift, and go to state 89
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '.'   shift, and go to state 80
    '@'   shift, and go to state 82


State 62

   20 expr: expr . '.' OBJECTID '(' comma_expr_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   27     | CASE expr . OF case_list ESAC
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    OF   shift, and go to state 90
    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '.'  shift, and go to state 80
    '@'  shift, and go to state 82


State 63

   28 expr: NEW TYPEID .

    $default  reduce using rule 28 (expr)


State 64

   20 expr: expr . '.' OBJECTID '(' comma_expr_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   29     | ISVOID expr .
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    '.'  shift, and go to state 80
    '@'  shift, and go to state 82

    '@'       [reduce using rule 29 (expr)]
    $default  reduce using rule 29 (expr)


State 65

   19 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 91


State 66

   22 expr: OBJECTID '(' . comma_expr_list ')'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    $default  reduce using rule 46 (comma_expr_list)

    expr             go to state 92
    comma_expr_list  go to state 93


State 67

   20 expr: expr . '.' OBJECTID '(' comma_expr_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr
   38     | NOT expr .

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '.'  shift, and go to state 80
    '@'  shift, and go to state 82

    '@'       [reduce using rule 38 (expr)]
    $default  reduce using rule 38 (expr)


State 68

   20 expr: expr . '.' OBJECTID '(' comma_expr_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   34     | '~' expr .
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    '.'  shift, and go to state 80
    '@'  shift, and go to state 82

    '@'       [reduce using rule 34 (expr)]
    $default  reduce using rule 34 (expr)


State 69

   49 semi_expr_list: error . ';'

    ';'  shift, and go to state 94


State 70

   20 expr: expr . '.' OBJECTID '(' comma_expr_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr
   47 semi_expr_list: expr . ';'

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '.'  shift, and go to state 80
    ';'  shift, and go to state 95
    '@'  shift, and go to state 82


State 71

   25 expr: '{' semi_expr_list . '}'
   48 semi_expr_list: semi_expr_list . expr ';'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '}'         shift, and go to state 96
    '('         shift, and go to state 53

    expr  go to state 97


State 72

   20 expr: expr . '.' OBJECTID '(' comma_expr_list ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr
   39     | '(' expr . ')'

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '.'  shift, and go to state 80
    ')'  shift, and go to state 98
    '@'  shift, and go to state 82


State 73

   36 expr: expr LE . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 99


State 74

   35 expr: expr '<' . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 100


State 75

   37 expr: expr '=' . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 101


State 76

   30 expr: expr '+' . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 102


State 77

   31 expr: expr '-' . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 103


State 78

   32 expr: expr '*' . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 104


State 79

   33 expr: expr '/' . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 105


State 80

   20 expr: expr '.' . OBJECTID '(' comma_expr_list ')'

    OBJECTID  shift, and go to state 106


State 81

   13 feature: OBJECTID ':' TYPEID ASSIGN expr ';' .

    $default  reduce using rule 13 (feature)


State 82

   21 expr: expr '@' . TYPEID '.' OBJECTID '(' comma_expr_list ')'

    TYPEID  shift, and go to state 107


State 83

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' . expr '}' ';'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 108


State 84

   23 expr: IF expr THEN . expr ELSE expr FI

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 109


State 85

   57 let_list: error let .

    $default  reduce using rule 57 (let_list)


State 86

   53 let: OBJECTID ':' . TYPEID
   54    | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 110


State 87

   26 expr: LET let_list IN . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr  go to state 111


State 88

   56 let_list: let_list ',' . let

    OBJECTID  shift, and go to state 58

    let  go to state 112


State 89

   24 expr: WHILE expr LOOP . expr POOL
